--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="col-xs-2"></div>
                 <div class="col-xs-8">
                     <div class="mainPicture"></div>
-                    <p class="text-center temperature">18 &deg;C</p>
-                    <p class="text-center cityName">Kraków</p>
+                    <p class="text-center temperature"><span class="tempValue">18</span> &deg;C</p>
+                    <p class="text-center cityName">Mozambik</p>
                     <button type="button" class="btn btn-primary btn-lg center-block showMore">
                         MORE <span class="glyphicon glyphicon-chevron-down"></span>
                     </button>
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-xs-1"></div>
                 <div class="col-xs-10">
-                    <p class="text-center cityName">Kraków</p>
+                    <p class="text-center cityName">Mozambik</p>
                     <div class="detailedWeather"></div>
                     <button type="button" class="btn btn-primary btn-lg center-block showLess">
                         BACK <span class="glyphicon glyphicon-chevron-up"></span>
