add event to header on mobile which shows first view(short weather)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header class="container">
-            <h2 class="page-header text-center"> <em>WEATHER</em>
+            <h2 class="page-header text-center"> 
+                <em>WEATHER</em>
             </h2>
         </header>
         
