API call for forecast weather

--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
                 <div class="col-xs-10 col-sm-8 col-lg-9">
                     <p class="text-center cityName">Mozambik</p>
                     <div class="detailedWeather">
-                        <table class="table-striped table-hover">
+                        <table class="table-striped">
                             <tr>
                                 <td>temperature</td>
-                                <td><span class="tempValue"></span>&deg;C</td>
+                                <td><span class="tempValue">18</span>&deg;C</td>
                             </tr>
                             <tr>
                                 <td>description</td>
-                                <td><span class="tempDescription"></span></td>
+                                <td><span class="tempDescription">clear sky</span></td>
                             </tr>
                             <tr>
                                 <td>pressure</td>
-                                <td><span class="pressureValue"></span>hPa</td>
+                                <td><span class="pressureValue">1010</span>hPa</td>
                             </tr>
                             <tr>
                                 <td>humidity</td>
-                                <td><span class="humidityValue"></span>%</td>
+                                <td><span class="humidityValue">21</span>%</td>
                             </tr>
                             <tr>
                                 <td>wind</td>
-                                <td><span class="windValue"></span>m/s</td>
+                                <td><span class="windValue">1</span>m/s</td>
                             </tr>
                             <tr>
                                 <td>visibility</td>
-                                <td><span class="visibilityValue"></span>m</td>
+                                <td><span class="visibilityValue">10000</span>m</td>
                             </tr>
                         </table>
                     </div>
@@ -79,15 +79,15 @@
         <!-- View for map -->
         <section class="container googleMap">
             <div class="row">
-                <div class="col-xs-1 col-sm-1 col-lg-1"></div>
-                <div class="col-xs-10 col-sm-10 col-lg-10">
+                <div class="col-sm-1 col-lg-1"></div>
+                <div class="col-xs-12 col-sm-10 col-lg-10">
 <!--                    <input id="pac-input" class="controls" type="text" placeholder="Search Box">-->
                     <div id="map"></div>
                     <button type="button" class="btn btn-primary btn-lg center-block showLess">
                         BACK <span class="glyphicon glyphicon-chevron-up"></span>
                     </button>
                 </div>
-                <div class="col-xs-1 col-sm-1 col-lg-1"></div>
+                <div class="col-sm-1 col-lg-1"></div>
             </div>
         </section>
         </article>
