--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
         </article>
         
-        <article>
+        <article clss="forecastArticle">
             <!-- View for hourly forecast -->
             <section class="container hourlyWeather">
                 <div class="row">
@@ -104,7 +104,7 @@
                     <div class="col-xs-10 col-sm-8 col-lg-9">
                         <p class="text-center cityName">Mozambik</p>
                         <div class="detailedWeather">
-                            <table class="table-striped">
+                            <table class="table-striped hourlyTable">
                                 <tr>
                                     <td><span class="hour">12:00</span></td>
                                     <td><span class="hourIcon"></span></td>
